# Rust-rest-consumer

./: Cargo.toml  README.md
src/: github_client.rs  main.rs
src/github/: contributor.rs  mod.rs  paged_result.rs  repository.rs
