[package]
name = "rust-rest-consumer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.18"
serde = { version ="1.0", features = ["derive"] }
reqwest = { version = "0.11.7", features = ["json"] }
clap = "2.34.0"
tokio = { version = "1.14.0", features = ["full"] }